added static css

--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@ body{
     font-family: sans-serif;
     font-size: 30px;
 }
-
+/* .paragraph :: first-lin{
+      font-size: 1rem;
+      font-weight: bold;
+      text-transform: capitalize;
+} */
 /* Body Header */
 
 #body-header{
@@ -170,10 +174,104 @@ section:nth-child(2n + 1) {
     padding-top: 10px;
     margin-right: 0.5rem;
 }
+section:target{
+    background-color: #cae0e7;
+}
 
+/* Timeline container*/
+.timeline {
+    width: 75%;
+    min-width: 750px;
+    position: relative;
+    font-size: 1rem;
+  }
+  
+  .timeline-box {
+    position: relative;
+    margin: 1rem 0;
+    height: auto;
+    width: 40%;
+  }
+  
+  .timeline-box:nth-child(2n + 1) {
+    left: 5%;
+  }
+  
+  .timeline-box:nth-child(2n) {
+    left: 55%;
+  }
+  
+  .timeline-head {
+    text-align: right;
+  }
+  
+  .timeline-head img {
+    position: absolute;
+  }
+  
+  .timeline-head h1 {
+    font-size: 1.5em;
+    margin-bottom: 0.25em;
+    color: #1262b3;
+  }
+  
+  .timeline-head h4 {
+    font-size: 1.25em;
+    color: #ff7b00;
+  }
+  
+  .timeline-head h6 {
+    font-size: 1.1em;
+    margin-bottom: 0.25em;
+  }
+  
+  .timeline-body {
+    padding: 4px;
+    text-align: justify;
+    line-height: 1.35em;
+  }
+  
+  .timeline-body p {
+    font-size: 1em;
+  }
+  
+  .timeline-divider {
+    height: 90%;
+    position: absolute;
+    left: 50%;
+    top: 5%;
+    width: 0;
+    transform: translateX(-50%);
+    border-left: 4px dashed #cacaca;
+  }
+  .divider-icon {
+    font-size: 2em;
+    color: #1262b3;
+    position: sticky;
+    top: 5%;
+    margin-left: -5px;
+    transform: rotate(90deg);
+  }
+  
+  /* lightBox*/
+/* 
+  #lightbox {
+    height: 0;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    transition: all 2s ease-in-out;
+}
 
-
-
+#lightbox:target {
+    height: 30%;
+    width: 30%;
+    top: 25%;
+    left: 25%;
+    background-color: #C9BF8C;
+} */
 
 /* skills section */
 
@@ -316,3 +414,84 @@ section:nth-child(2n + 1) {
     height: inherit;
     width: 72%;
 }
+
+
+/* contact section */
+#contact {
+    background-image: linear-gradient(to top right, #2857a4, #d26d92);
+    color: white;
+    font-size: 1rem;
+  }
+  
+  #contact .section-heading {
+    color: rgb(122, 56, 56) !important;
+    
+  }
+
+
+  #contact .social-links i:hover {
+    transform: scale(1.25);
+    transition: 0.3s;
+    text-shadow: 0px 0px 20px #a59f9f;
+  }
+  
+  .contact-container {
+    width: 90%;
+    min-width: 725px;
+    margin-bottom: 4rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    font-size: 1.25em;
+  }
+  
+  .contact-container .contact-form-container, .contact-container .address-container {
+    flex-basis: 40%;
+    overflow-x: hidden;
+  }
+  .contact-container .contact-form-container .input-field {
+    width: 100%;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    border: none;
+    height: 2.5rem;
+    font-size: 1em;
+    color: white;
+    border-bottom: 3px solid white;
+    background-color: #0000;
+  }
+  
+  .contact-container .contact-form-container textarea.input-field {
+    height: 5rem;
+    resize: none;
+  }
+  
+  .contact-container .contact-form-container .input-field:focus {
+    outline: none;
+    border-bottom: 3px solid #bebebe;
+  }
+  
+  .contact-container .contact-form-container .input-field::placeholder {
+    color: #bebebe;
+  }
+  
+  .contact-container .contact-form-container #submit {
+    display: block;
+    margin: 0 auto;
+    font-size: 0.75em;
+    padding: 0.5rem 1rem;
+  }
+  
+  .contact-container .contact-form-container #submit:hover {
+    color: #1262b3;
+  }
+  
+  .contact-container .address-container h2, .contact-container .address-container div {
+    margin: 0.8rem 0;
+  }
+  
+  .contact-container .address-container div, .contact-container .address-container p {
+    font-size: 0.85em;
+  }
+      
